--- a/_data/blog/2020-11-07-nuage.md
+++ b/_data/blog/2020-11-07-nuage.md
@@ -4,7 +4,7 @@ path: /fillerama
 date: 2020-11-07T22:50:48.636Z
 title: NUAGE
 metaDescription: 'Azure, AWS, antivirus'
-thumbnail: /assets/security-protection-anti-virus-software-60504.jpeg
+thumbnail: /assets/coderes.jpeg
 ---
 # No, I'll fix it. I'm good at fixing rot. Call me the Rotmeister. No, I'm the Doctor. Don't call me the Rotmeister.
 
